--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class = "container">
+        <div class = "screen">80085</div>
+        <div class = "keypad">
+            <button class = "key">7</button>
+            <button class = "key">8</button>
+            <button class = "key">9</button>
+            <button class = "key">/</button>
+            <button class = "key">4</button>
+            <button class = "key">5</button>
+            <button class = "key">6</button>
+            <button class = "key">*</button>
+            <button class = "key">1</button>
+            <button class = "key">2</button>
+            <button class = "key">3</button>
+            <button class = "key">-</button>
+            <button class = "key">0</button>
+            <button class = "key">Clear</button>
+            <button class = "key">Enter</button>
+            <button class = "key">+</button>
+        </div> 
+    </div>    
 </body>
 </html>
