--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="script" href="./calculator.js" defer>
     <title>Calculator</title>
 </head>
 <body>
@@ -32,6 +31,6 @@
             </div> 
         </div>    
     </div>
-    
+    <script src ="./calculator.js"></script>
 </body>
 </html>
