--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class = "screen">80085</div>
+        <div class = "screen"></div>
         <div class = "keypadContainer">
             <div class = "keypad">
                 <button class = "key">7</button>
